--- a/hacker-stories/hacker-stories/src/App.css
+++ b/hacker-stories/hacker-stories/src/App.css
@@ -38,8 +38,8 @@
 }
 
 body {
-  background-color: #3e3e3e;
-  color: white;
+  background-color: #e6e6e6;
+  color: #3f3f3f;
   font-size: 20px;
   font-family: arial;
   text-align: center;
