--- a/times/times/src/App.css
+++ b/times/times/src/App.css
@@ -39,7 +39,7 @@
 
 body {
   background-color: #e6e6e6;
-  color: #3f3f3f;
+  color: rgb(255, 255, 255);
   font-size: 20px;
   font-family: arial;
   text-align: center;
@@ -57,7 +57,7 @@ li {
 
 a {
   text-decoration: none;
-  color: black;
+  color: rgb(248, 190, 0);
 }
 
 a:hover {
@@ -69,4 +69,29 @@ img {
   width: 80px;
   height: auto;
   margin: 20px auto;
+}
+
+h1 {
+  color: #282c34;
+}
+
+.palmeiras {
+  background-color: rgb(0, 97, 0);
+}
+
+.corinthians {
+  background-color: black;
+}
+
+.spfc {
+  background-color: red;
+}
+
+.santos {
+  background-color: white;
+  color: #3f3f3f;
+}
+
+div {
+  padding: 20px;
 }
